# zotero-agents

./: .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  README-de.md  README-esES.md  README-frFR.md  README-itIT.md  README-jaJP.md  README-koKR.md  README-ptBR.md  README-ruRU.md  README-v0.5.0-alpha-draft.md  README-zhCN.md  README-zhTW.md  README.md  content-package.version.json  eslint.config.mjs  install.ps1  manifest.json  package-lock.json  package.json  tsconfig.json  zotero-plugin.config.ts
addon/: bootstrap.js  manifest.json  prefs.js
artifact/: architectural_refactor_plan_20260613.md  assistant_sidebar_ui_refactor_plan_20260502.md  assistant_workspace_dual_instance_investigation_20260630.md  code_review_report_20260613.md  code_review_summary_20260502.md  host_bridge_phase9_mcp_deprecation_plan_20260520.md  literature-deep-reading-workflow-design.md  mcp_design_guide.md  rename_to_zotero_agents_investigation_20260622.md  rename_user_visible_text_only_20260622.md  synthesis-agent-payload-simplification-notes.md  synthesis-skill-flow-current-contract.html  synthesis-skill-flow-demo.html  synthesis_kg_foundation_design_20260524.md  synthesis_kg_git_sync_design_20260524.md  synthesis_kg_tag_vocabulary_design_20260524.md  synthesis_kg_topic_graph_design_20260524.md  synthesis_layer_propsal.md  (+17 more)
cli/zotero-bridge/: Cargo.toml  release.json
cli/zotero-bridge/scripts/: install.sh
cli/zotero-bridge/src/: args.rs  client.rs  commands.rs  config.rs  error.rs  main.rs  output.rs
native/acp-ws-bridge/: Cargo.toml
native/acp-ws-bridge/src/: main.rs
(+4830 files in other folders)
