[package]
name = "zotero-bridge"
version = "0.1.0"
edition = "2021"
description = "Agent-first CLI for the Zotero Skills Host Bridge"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env", "wrap_help"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
